feat: Adicionado PIN Code na coleção Room
