# api/swagger.yaml
@@ -23,6 +23,8 @@ definitions:
         type: string
       name:
         type: string
+      pincode:
+        type: string
     type: object
   rooms.RoomJoinRequest:
     properties:
@@ -41,6 +43,13 @@ definitions:
   rooms.RoomNewRequest:
     properties:
       name:
+        type: string
+    type: object
+  rooms.RoomNewResponse:
+    properties:
+      pincode:
+        type: string
+      room_id:
         type: string
     type: object
 info:
@@ -65,7 +74,7 @@ paths:
         "200":
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/rooms.RoomNewResponse'
         "400":
           description: Bad Request
           schema:
@@ -77,7 +86,7 @@ paths:
       summary: Create a new room
       tags:
       - Rooms
-  /rooms/{id}/join:
+  /rooms/{pincode}/join:
     post:
       consumes:
       - application/json
@@ -88,9 +97,9 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/rooms.RoomJoinRequest'
-      - description: Room Id
+      - description: Pin Code of the Room
         in: path
-        name: id
+        name: pincode
         required: true
         type: string
       produces:
@@ -115,12 +124,12 @@ paths:
       summary: Join a room
       tags:
       - Rooms
-  /rooms/{id}/players:
+  /rooms/{pincode}/players:
     get:
       parameters:
-      - description: Room Id
+      - description: Pin Code of the Room
         in: path
-        name: id
+        name: pincode
         required: true
         type: string
       produces:
