# internal/controllers/rooms/rooms.go
@@ -4,11 +4,14 @@ import (
 	"cloud.google.com/go/firestore"
 	"context"
 	"errors"
+	"fmt"
 	"github.com/gofiber/fiber/v2"
 	"github.com/golobby/container"
 	"github.com/thiagopereiramartinez/scrumpoker-run.api/internal/models/players"
 	"github.com/thiagopereiramartinez/scrumpoker-run.api/internal/models/rooms"
 	"github.com/thiagopereiramartinez/scrumpoker-run.api/internal/utils"
+	"math/rand"
+	"time"
 )
 
 // @Summary Create a new room
@@ -16,7 +19,7 @@ import (
 // @Param room body rooms.RoomNewRequest true "Create a new room"
 // @Accept json
 // @Produce json
-// @Success 200 {object} string
+// @Success 200 {object} rooms.RoomNewResponse
 // @Failure 400 {object} models.Error
 // @Failure 500 {object} models.Error
 // @Router /rooms [post]
@@ -35,9 +38,14 @@ func newRoom(c *fiber.Ctx) error {
 	db := new(firestore.Client)
 	container.Make(&db)
 
+	seed := rand.NewSource(time.Now().UnixNano())
+	rd := rand.New(seed)
+	pinCode := fmt.Sprintf("%06d", rd.Intn(999999))
+
 	doc := db.Collection("rooms").NewDoc()
 	_, err := doc.Set(context.Background(), map[string]interface{}{
 		"name":      body.Name,
+		"pincode":   pinCode,
 		"timestamp": firestore.ServerTimestamp,
 	})
 	if err != nil {
@@ -45,21 +53,27 @@ func newRoom(c *fiber.Ctx) error {
 		return nil
 	}
 
-	return c.JSON(doc.ID)
+	return c.JSON(rooms.RoomNewResponse{
+		RoomId:  doc.ID,
+		PinCode: pinCode,
+	})
 }
 
 // @Summary Join a room
 // @Tags Rooms
 // @Param body body rooms.RoomJoinRequest true "Join a room"
-// @Param id path string true "Room Id"
+// @Param pincode path string true "Pin Code of the Room"
 // @Accept json
 // @Produce json
 // @Success 200 {object} rooms.RoomJoinResponse
 // @Failure 400 {object} models.Error
 // @Failure 404 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /rooms/{id}/join [post]
+// @Router /rooms/{pincode}/join [post]
 func joinRoom(c *fiber.Ctx) error {
+
+	ctx := context.Background()
+
 	body := new(rooms.RoomJoinRequest)
 	if err := c.BodyParser(body); err != nil {
 		_ = utils.SendError(c, 500, err)
@@ -74,13 +88,15 @@ func joinRoom(c *fiber.Ctx) error {
 	db := new(firestore.Client)
 	container.Make(&db)
 
-	roomId := c.Params("id")
+	pinCode := c.Params("pincode")
 
-	roomSnap, err := db.Collection("rooms").Doc(roomId).Get(context.Background())
-	if err != nil {
+	roomSnap, err := db.Collection("rooms").Where("pincode", "==", pinCode).Limit(1).Documents(ctx).Next()
+	if err != nil || !roomSnap.Exists() {
 		_ = utils.SendError(c, 404, errors.New("room not found"))
 		return nil
 	}
+
+	roomId := roomSnap.Ref.ID
 
 	var room rooms.Room
 	err = roomSnap.DataTo(&room)
@@ -88,7 +104,7 @@ func joinRoom(c *fiber.Ctx) error {
 		_ = utils.SendError(c, 500, errors.New("unable to retrieve room information"))
 		return nil
 	}
-	room.Id = roomSnap.Ref.ID
+	room.Id = roomId
 
 	player := db.Collection("rooms").Doc(roomId).Collection("players").NewDoc()
 	_, err = player.Set(context.Background(), map[string]interface{}{
@@ -109,25 +125,27 @@ func joinRoom(c *fiber.Ctx) error {
 
 // @Summary Get players from a room
 // @Tags Rooms
-// @Param id path string true "Room Id"
+// @Param pincode path string true "Pin Code of the Room"
 // @Produce json
 // @Success 200 {array} players.Player
 // @Failure 404 {object} models.Error
 // @Failure 500 {object} models.Error
-// @Router /rooms/{id}/players [get]
+// @Router /rooms/{pincode}/players [get]
 func getPlayers(c *fiber.Ctx) error {
-	roomId := c.Params("id")
 
 	ctx := context.Background()
+	pinCode := c.Params("pincode")
 
 	db := new(firestore.Client)
 	container.Make(&db)
 
-	_, err := db.Collection("rooms").Doc(roomId).Get(ctx)
-	if err != nil {
+	roomSnap, err := db.Collection("rooms").Where("pincode", "==", pinCode).Limit(1).Documents(ctx).Next()
+	if err != nil || !roomSnap.Exists() {
 		_ = utils.SendError(c, 404, errors.New("room not found"))
 		return nil
 	}
+
+	roomId := roomSnap.Ref.ID
 
 	snaps, err := db.Collection("rooms").Doc(roomId).Collection("players").Documents(ctx).GetAll()
 	if err != nil {
@@ -151,6 +169,6 @@ func Register(router fiber.Router) {
 	room := router.Group("/rooms")
 
 	room.Post("", newRoom)
-	room.Post(":id/join", joinRoom)
-	room.Get(":id/players", getPlayers)
+	room.Post(":pincode/join", joinRoom)
+	room.Get(":pincode/players", getPlayers)
 }
